Add 2 more items

--- a/venta/index.html
+++ b/venta/index.html
@@ -56,6 +56,15 @@
             Disponible: Inmediato</span>
           </div>
         </li>
+
+        <li>
+          <img src="images/airelibre/silla_mono.jpeg" alt="">
+          <div class="overlay">
+            <span>Silla Infantil Playa Camping Plegable - Con respaldo Mono<br>
+            Precio: <b>$  $ 4,500 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
       </ul>
     </div>
     
@@ -205,91 +214,424 @@
       <ul class="image-gallery">
 
         <li>
-          <img src="images/libros/libro_disculpe.jpeg" alt="">
+          <img src="images/lego_city.jpeg" alt="">
           <div class="overlay">
-            <span>Disculpe ... ¿es usted una bruja?<br>
-            Precio: <b>$  $ 2,100 </b><br>
+            <span>Lego City - Police - 80 piezas - Starter Set 60136 Building Kit<br>
+            Precio: <b>$  $ 7,000 </b><br>
             Disponible: Inmediato</span>
           </div>
         </li>
 
         <li>
-          <img src="images/libros/libro_kasi_kasi.jpeg" alt="">
+          <img src="images/juegos/lego_star_wars_75088.jpeg" alt="">
           <div class="overlay">
-            <span>El sueño de Kasi Kasi<br>
-            Precio: <b>$  $ 1,500 </b><br>
+            <span>Lego Star Wars Senate Commando Troopers - 75088<br>
+            Precio: <b>$  $ 10,000 </b><br>
             Disponible: Inmediato</span>
           </div>
         </li>
 
         <li>
-          <img src="images/libros/libro_look_3_anthology.jpeg" alt="">
+          <img src="images/juegos/lego_star_wars_75133.jpeg" alt="">
           <div class="overlay">
-            <span>Look 3 - Nationl Geographic - Anthology<br>
-            Precio: <b>$  $ 1,000 </b><br>
+            <span>Lego Star Wars Rebel Alliance Battle Pack - 75133<br>
+            Precio: <b>$  $ 10,000 </b><br>
             Disponible: Inmediato</span>
           </div>
         </li>
 
         <li>
-          <img src="images/libros/libro_look_3_student.jpeg" alt="">
+          <img src="images/juegos/simil_lego_star_wars.jpeg" alt="">
           <div class="overlay">
-            <span>Look 3 - Nationl Geographic - Student Book<br>
-            Precio: <b>$  $ 1,500 </b><br>
+            <span>Star Wars S.y (Replica Lego) - Sy196D - 80 piezas<br>
+            Precio: <b>$  $ 2,000 </b><br>
             Disponible: Inmediato</span>
           </div>
         </li>
 
         <li>
-          <img src="images/libros/libro_look_3_workbook.jpeg" alt="">
+          <img src="images/juegos/simil_lego_spiderman.jpeg" alt="">
           <div class="overlay">
-            <span>Look 3 - Nationl Geographic - Workbook (con varias páginas escritas)<br>
-            Precio: <b>$  $ 1,500 </b><br>
+            <span>Spiderman Super Heroes (Replica Lego)<br>
+            Precio: <b>$  $ 2,000 </b><br>
             Disponible: Inmediato</span>
           </div>
         </li>
 
         <li>
-          <img src="images/libros/libro_paraguas.jpeg" alt="">
+          <img src="images/juegos/blocky_competicion.jpeg" alt="">
           <div class="overlay">
-            <span>El paraguas floreado<br>
-            Precio: <b>$  $ 1,500 </b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/libros/libro_traje.jpg" alt="">
-          <div class="overlay">
-            <span>El traje del emperador y otros cuentos clásicos<br>
-            Precio: <b>$  $ 1,200 </b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/libros/libro_casa.jpeg" alt="">
-          <div class="overlay">
-            <span>La casa maldita<br>
-            Precio: <b>$  $ 1,600 </b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/libros/libro_perdidos.jpeg" alt="">
-          <div class="overlay">
-            <span>Perdidos y encontrados<br>
+            <span>Blocky competición 2 - 200 piezas<br>
             Precio: <b>$  $ 3,000 </b><br>
             Disponible: Inmediato</span>
           </div>
         </li>
 
         <li>
-          <img src="images/libros/libro_titere.jpeg" alt="">
+          <img src="images/juegos/blocky_galactico.jpeg" alt="">
           <div class="overlay">
-            <span>Libro titere - Tomi Tiranosaurio y su fiesta de cumpleaños<br>
+            <span>Blocky Galactico X3  x-plorer - 65 piezas<br>
+            Precio: <b>$  $ 1,500 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/stunt_flyer.jpeg" alt="">
+          <div class="overlay">
+            <span>Stunt Flyer Avion Lanzador<br>
+            Precio: <b>$  $ 7,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/te_conozco.jpeg" alt="">
+          <div class="overlay">
+            <span>Te Conozco? - ¿cuales son tus verdaderos colores? - SELLADO - SIN USO<br>
+            Precio: <b>$  $ 2,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/9_pistas.jpeg" alt="">
+          <div class="overlay">
+            <span>9 pistas - Piensa rapido y descubre el misterio<br>
             Precio: <b>$  $ 1,700 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/a_quien_elijo.jpeg" alt="">
+          <div class="overlay">
+            <span>A quien Elijo - Juego de mesa<br>
+            Precio: <b>$  $ 1,600 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/aspiradora_juguete.jpeg" alt="">
+          <div class="overlay">
+            <span>Caminador Aspiradora Lustradora Juguete<br>
+            Precio: <b>$  $ 2,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/binocular.jpeg" alt="">
+          <div class="overlay">
+            <span>Binocular con luz nocturna - Galileo<br>
+            Precio: <b>$  $ 5,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/brilla_princesa.jpeg" alt="">
+          <div class="overlay">
+            <span>Set para armar Bishou - Disney Princesa<br>
+            Precio: <b>$  $ 1,500 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/carro_compras.jpeg" alt="">
+          <div class="overlay">
+            <span>Carrito de compras infantil<br>
+            Precio: <b>$  $ 1,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/coche_paseo.jpeg" alt="">
+          <div class="overlay">
+            <span>Coche de Paseo de Juguete con bandeja - Fiorella<br>
+            Precio: <b>$  $ 2,400 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/cocina_juguete.jpeg" alt="">
+          <div class="overlay">
+            <span>Juego De Cocina + Juego de Te Duravit <br>
+            Precio: <b>$  $ 4,500 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/creando.jpeg" alt="">
+          <div class="overlay">
+            <span>Creando mi moda - Arma tus propias pulseras<br>
+            Precio: <b>$  $ 2,500 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/dream_jungle.jpeg" alt="">
+          <div class="overlay">
+            <span>Dream Jungle - 115 piezas - Electric BLockWorld No. 9902<br>
+            Precio: <b>$  $ 6,500 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/grua_cat.jpeg" alt="">
+          <div class="overlay">
+            <span>Retroexcavadora CAT Importada A Control Remoto.<br>
+            Precio: <b>$  $ 8,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/hotwheels_pared.jpeg" alt="">
+          <div class="overlay">
+            <span>Hotwheeels - Wall Tracks spin Slammer<br>
+            Precio: <b>$  $ 20,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/king_pong.jpeg" alt="">
+          <div class="overlay">
+            <span>Juego de mesa King Pong<br>
+            Precio: <b>$  $ 3,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/letras_3d.jpeg" alt="">
+          <div class="overlay">
+            <span>Juego de mesa Letras 3D<br>
+            Precio: <b>$  $ 2,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/ludo_avengers.jpeg" alt="">
+          <div class="overlay">
+            <span>Ludo Avengers<br>
+            Precio: <b>$  $ 1,500 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/peluqueria.jpeg" alt="">
+          <div class="overlay">
+            <span>Corazon Coqueto Set Valija Juego De Peluqueria Y Belleza<br>
+            Precio: <b>$  $ 4,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/pianito.jpeg" alt="">
+          <div class="overlay">
+            <span>Piano Con Luz Y Sonido Intellect Toys<br>
+            Precio: <b>$  $ 3,500 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/pinball_star-wars.jpeg" alt="">
+          <div class="overlay">
+            <span>Pinball Star Wars<br>
+            Precio: <b>$  $ 8,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/ruleta.jpeg" alt="">
+          <div class="overlay">
+            <span>Ruleta Plastigal - Art.205 - Poco uso<br>
+            Precio: <b>$  $ 1,800 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/sospechosos.jpeg" alt="">
+          <div class="overlay">
+            <span>Sospechosos - Juego de misterio<br>
+            Precio: <b>$  $ 2,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/tambor.jpeg" alt="">
+          <div class="overlay">
+            <span>Tambores juguete rosa<br>
+            Precio: <b>$  $ 3,500 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/el_cuerpo_humano.jpeg" alt="">
+          <div class="overlay">
+            <span>El cuerpo humano<br>
+            Precio: <b>$  $ 1,100 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/jenga_star_wars.jpeg" alt="">
+          <div class="overlay">
+            <span>Jenga Star Wars<br>
+            Precio: <b>$  $ 2,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/pata_pata_unicornio.jpeg" alt="">
+          <div class="overlay">
+            <span>Pata Pata unicornio - Desmontable en peluche<br>
+            Precio: <b>$  $ 7,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/avengers_quien_es_quien.jpeg" alt="">
+          <div class="overlay">
+            <span>Avengers tipo Quien es Quien / A quien elijo<br>
+            Precio: <b>$  $ 2,500 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/magia_180trucos.jpeg" alt="">
+          <div class="overlay">
+            <span>Magia 180 trucos - Ruibal<br>
+            Precio: <b>$  $ 5,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/petite_gourmet.jpg" alt="">
+          <div class="overlay">
+            <span>Juego Cocina Infantil C/ Horno Acc Petit Gourmet / Lionels Jeg N314<br>
+            Precio: <b>$  $ 1,500 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/atril.jpg" alt="">
+          <div class="overlay">
+            <span>Atril de madera altura regulable<br>
+            Precio: <b>$  $ 2,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/peluche_mona.jpeg" alt="">
+          <div class="overlay">
+            <span>Peluche Mona<br>
+            Precio: <b>$  $ 1,800 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/peluche_coati.jpeg" alt="">
+          <div class="overlay">
+            <span>Peluche Coati - Cataratas del Iguazu - Brasil<br>
+            Precio: <b>$  $ 2,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/peluche_loro.jpeg" alt="">
+          <div class="overlay">
+            <span>Peluche Loro Guacamayo - Brasil<br>
+            Precio: <b>$  $ 2,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/peluche_poo_mediano.jpeg" alt="">
+          <div class="overlay">
+            <span>Peluche Poo<br>
+            Precio: <b>$  $ 1,500 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/peluche_bambi.jpeg" alt="">
+          <div class="overlay">
+            <span>Peluche Bambi<br>
+            Precio: <b>$  $ 1,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/magia_3_ruibal.jpeg" alt="">
+          <div class="overlay">
+            <span>Juego Magia No.3 Art. 4514 - Ruibal<br>
+            Precio: <b>$  $ 1,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/claim.jpeg" alt="">
+          <div class="overlay">
+            <span>CLAIM Reclama La Corona Cartas Juego De Mesa Top Toys<br>
+            Precio: <b>$  $ 2,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/backgammon.jpeg" alt="">
+          <div class="overlay">
+            <span>Backgammon<br>
+            Precio: <b>$  $ 2,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/cabina_bumm.jpeg" alt="">
+          <div class="overlay">
+            <span>Juego De Mesa Cabina Bumm Juego De Habilidad 15014 Toyco<br>
+            Precio: <b>$  $ 2,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/pathfinder.jpeg" alt="">
+          <div class="overlay">
+            <span>Pathfinder Adventure Card Game - Rise of the Rune Lords<br>
+            Precio: <b>$  $ 15,000 </b><br>
             Disponible: Inmediato</span>
           </div>
         </li>
@@ -483,7 +825,7 @@
           <img src="images/muebles/cuna_funcional.jpg" alt="">
           <div class="overlay">
             <span>Cuna funcional con 3 cajones y baul a cama de una plaza salen de 130k a 200k. Le ponemos 75k<br>
-            Precio: <b>$  $ 50,000 </b><br>
+            Precio: <b>$  $ 65,000 </b><br>
             Disponible: Inmediato</span>
           </div>
         </li>
@@ -508,7 +850,7 @@
           <img src="images/protectores.jpg" alt="">
           <div class="overlay">
             <span>Set Protecciones Tuxs Profesional Kit Rodillera Codera Skate<br>
-            Precio: <b>$  $ 9,000 </b><br>
+            Precio: <b>$  $ 5,000 </b><br>
             Disponible: Inmediato</span>
           </div>
         </li>
