--- a/venta/index.html
+++ b/venta/index.html
@@ -18,6 +18,7 @@
     
         <ul class="menu">
           <li><a href="#airelibre">Aire Libre</a></li>
+          <li><a href="#calzado">Calzado</a></li>
           <li><a href="#cocina">Cocina</a></li>
           <li><a href="#juegos">Juegos</a></li>
           <li><a href="#libros">Libros</a></li>
@@ -62,6 +63,22 @@
           <div class="overlay">
             <span>Silla Infantil Playa Camping Plegable - Con respaldo Mono<br>
             Precio: <b>$  $ 4,500 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+      </ul>
+    </div>
+    
+
+    <div class="container">
+      <h2 id="calzado" class="heading-text">Calzado</h2>
+      <ul class="image-gallery">
+
+        <li>
+          <img src="images/calzado/zapatos_taco_azul_36.jpeg" alt="">
+          <div class="overlay">
+            <span>Zapatos de Taco Azules - Talle 36 - Abiertos<br>
+            Precio: <b>$  $ 2,000 </b><br>
             Disponible: Inmediato</span>
           </div>
         </li>
