New paths for some item images

--- a/venta/index.html
+++ b/venta/index.html
@@ -231,7 +231,7 @@
       <ul class="image-gallery">
 
         <li>
-          <img src="images/lego_city.jpeg" alt="">
+          <img src="images/juegos/lego_city.jpeg" alt="">
           <div class="overlay">
             <span>Lego City - Police - 80 piezas - Starter Set 60136 Building Kit<br>
             Precio: <b>$  $ 7,000 </b><br>
@@ -758,7 +758,7 @@
       <ul class="image-gallery">
 
         <li>
-          <img src="images/mesa_y_sillas.png" alt="">
+          <img src="images/muebles/mesa_y_sillas.jpeg" alt="">
           <div class="overlay">
             <span>Juego de comedor: Mesa extensible a 1.80 mts Negra<br>
             Precio: <b>$  $ 40,000 </b><br>
@@ -855,7 +855,7 @@
       <ul class="image-gallery">
 
         <li>
-          <img src="images/monopatin_1.jpeg" alt="">
+          <img src="images/rodados/monopatin_chico.jpg" alt="">
           <div class="overlay">
             <span>Monopatin Sieteveinte Glow - Metalico<br>
             Precio: <b>$  $ 9,000 </b><br>
