--- a/venta/index.html
+++ b/venta/index.html
@@ -609,6 +609,15 @@
         </li>
 
         <li>
+          <img src="images/juegos/peluche_alvin.jpeg" alt="">
+          <div class="overlay">
+            <span>Peluche Alvin<br>
+            Precio: <b>$  $ 1,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
           <img src="images/juegos/magia_3_ruibal.jpeg" alt="">
           <div class="overlay">
             <span>Juego Magia No.3 Art. 4514 - Ruibal<br>
