--- a/venta/index.html
+++ b/venta/index.html
@@ -20,9 +20,10 @@
           <li><a href="#airelibre">Aire Libre</a></li>
           <li><a href="#calzado">Calzado</a></li>
           <li><a href="#cocina">Cocina</a></li>
+          <li><a href="#hogar">Hogar</a></li>
           <li><a href="#juegos">Juegos</a></li>
           <li><a href="#libros">Libros</a></li>
-          <li><a href="#muebles">Muebles y Hogar</a></li>
+          <li><a href="#muebles">Muebles</a></li>
           <li><a href="#rodados">Rodados</a></li>
           <li><a href="#tecnologia">Tecnología</a></li>
         </ul>
@@ -496,15 +497,6 @@
           <div class="overlay">
             <span>El cuerpo humano<br>
             Precio: <b>$  $ 1,100 </b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/juegos/jenga_star_wars.jpeg" alt="">
-          <div class="overlay">
-            <span>Jenga Star Wars<br>
-            Precio: <b>$  $ 2,000 </b><br>
             Disponible: Inmediato</span>
           </div>
         </li>
