--- a/venta/index.html
+++ b/venta/index.html
@@ -741,6 +741,132 @@
             Disponible: Inmediato</span>
           </div>
         </li>
+
+        <li>
+          <img src="images/libros/libro_liebre_y_leon.jpeg" alt="">
+          <div class="overlay">
+            <span>Liebre y Leon<br>
+            Precio: <b>$  $ 1,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/libros/libro_misterio_huesopolis.jpeg" alt="">
+          <div class="overlay">
+            <span>El misterio de huesopolis<br>
+            Precio: <b>$  $ 2,500 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/libros/libro_willy_soniador.jpeg" alt="">
+          <div class="overlay">
+            <span>Willy el Soñador<br>
+            Precio: <b>$  $ 2,800 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/libros/libro_tres_chanchitos.jpeg" alt="">
+          <div class="overlay">
+            <span>Los Tres Cochinitos (Ilustraciones de Mei Matsuoka) <br>
+            Precio: <b>$  $ 2,500 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/libros/libro_mejor_del_mundo.jpeg" alt="">
+          <div class="overlay">
+            <span>El mejor del mundo<br>
+            Precio: <b>$  $ 1,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/libros/libro_aladdin.jpeg" alt="">
+          <div class="overlay">
+            <span>Aladdin (Clásicos de Disney)<br>
+            Precio: <b>$  $ 2,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/libros/libro_museo_sobre_mi.jpeg" alt="">
+          <div class="overlay">
+            <span>Un museo sobre mi<br>
+            Precio: <b>$  $ 3,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/libros/libro_pitucon.jpeg" alt="">
+          <div class="overlay">
+            <span>Pitucon de Chocolate<br>
+            Precio: <b>$  $ 2,500 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/libros/libro_pepino_pinguino.jpeg" alt="">
+          <div class="overlay">
+            <span>Pepino el pingüino<br>
+            Precio: <b>$  $ 1,500 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/libros/libro_dragoncito_pistas.jpeg" alt="">
+          <div class="overlay">
+            <span>Dragon Cito Sigue las Pistas<br>
+            Precio: <b>$  $ 1,500 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/libros/libro_dragoncito_mal_dia.jpeg" alt="">
+          <div class="overlay">
+            <span>Dragon Cito Tiene un mal día<br>
+            Precio: <b>$  $ 1,500 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/libros/libro_escuela_monstruos_1.jpeg" alt="">
+          <div class="overlay">
+            <span>Comic: Escuela de Monstruos 1<br>
+            Precio: <b>$  $ 2,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/libros/libro_escuela_monstruos_7.jpeg" alt="">
+          <div class="overlay">
+            <span>Comic: Escuela de Monstruos 7<br>
+            Precio: <b>$  $ 2,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/libros/libro_spiderman.jpeg" alt="">
+          <div class="overlay">
+            <span>Comic: El Asombroso Spier-man<br>
+            Precio: <b>$  $ 1,500 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
       </ul>
     </div>
     
