--- a/venta/index.html
+++ b/venta/index.html
@@ -67,6 +67,15 @@
             Disponible: Inmediato</span>
           </div>
         </li>
+
+        <li>
+          <img src="images/airelibre/brujula.jpeg" alt="">
+          <div class="overlay">
+            <span>Brujula de mano - Albatros<br>
+            Precio: <b>$  $ 1,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
       </ul>
     </div>
     
@@ -635,6 +644,42 @@
             Disponible: Inmediato</span>
           </div>
         </li>
+
+        <li>
+          <img src="images/juegos/aro_basquet.jpg" alt="">
+          <div class="overlay">
+            <span>Aro de basquet metalico con tablero (sin uso)<br>
+            Precio: <b>$  $ 4,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/sliding_mouse.jpeg" alt="">
+          <div class="overlay">
+            <span>Sliding Mouse<br>
+            Precio: <b>$  $ 3,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/que_artista.jpg" alt="">
+          <div class="overlay">
+            <span>Que Artista<br>
+            Precio: <b>$  $ 3,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/letras_y_numeros.jpg" alt="">
+          <div class="overlay">
+            <span>Letras y Números<br>
+            Precio: <b>$  $ 2,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
       </ul>
     </div>
     
@@ -828,6 +873,78 @@
           <div class="overlay">
             <span>Comic: El Asombroso Spier-man<br>
             Precio: <b>$  $ 1,500 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/libros/libro_ben10.jpeg" alt="">
+          <div class="overlay">
+            <span>Comic: Ben 10 Libro De Oro Con Stickers<br>
+            Precio: <b>$  $ 1,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/libros/libro_los_ninos_no_existen.jpeg" alt="">
+          <div class="overlay">
+            <span>Los niños no existen y otros cuentos con monstruos<br>
+            Precio: <b>$  $ 1,250 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/libros/libro_cinco_problemas.jpeg" alt="">
+          <div class="overlay">
+            <span>Cinco problemas para don Caracol<br>
+            Precio: <b>$  $ 1,250 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/libros/libro_el_ultimo_espia.jpeg" alt="">
+          <div class="overlay">
+            <span>El Último Espía<br>
+            Precio: <b>$  $ 1,500 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/libros/libro_el_dragon_que_asustaba.jpeg" alt="">
+          <div class="overlay">
+            <span>El dragón que asustaba a la población<br>
+            Precio: <b>$  $ 1,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/libros/libro_peregrinos_en_comunion_1.jpeg" alt="">
+          <div class="overlay">
+            <span>Peregrinos en Comunión 1<br>
+            Precio: <b>$  $ 800 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/libros/libro_peregrinos_en_comunion_2.jpeg" alt="">
+          <div class="overlay">
+            <span>Peregrinos en Comunión 2<br>
+            Precio: <b>$  $ 800 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/libros/libro_oraciones_peregrinos.jpeg" alt="">
+          <div class="overlay">
+            <span>Oraciones y respuestas de los Peregrinos en Comunion<br>
+            Precio: <b>$  $ 800 </b><br>
             Disponible: Inmediato</span>
           </div>
         </li>
@@ -1047,6 +1164,24 @@
           <div class="overlay">
             <span>Electroestimulador muscular de 16 electrodos. Incluye corrientes rusas, galvánica y electroanalgesia.<br>
             Precio: <b>$  $ 25,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/tech/phone_holder.jpeg" alt="">
+          <div class="overlay">
+            <span>Soporte para Telefono en Auto - Magnético Bolita - Sin uso<br>
+            Precio: <b>$  $ 4,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/tech/cargador_usb_auto.jpeg" alt="">
+          <div class="overlay">
+            <span>Cargador Adaptador 3 x USB para Auto<br>
+            Precio: <b>$  $ 700 </b><br>
             Disponible: Inmediato</span>
           </div>
         </li>
