--- a/venta/index.html
+++ b/venta/index.html
@@ -295,6 +295,24 @@
         </li>
 
         <li>
+          <img src="images/juegos/magical_magnet.jpeg" alt="">
+          <div class="overlay">
+            <span>Magical Magnet - 40 piezas<br>
+            Precio: <b>$  $ 15,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/la_pochoclera.jpeg" alt="">
+          <div class="overlay">
+            <span>La pochoclerita<br>
+            Precio: <b>$  $ 2,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
           <img src="images/stunt_flyer.jpeg" alt="">
           <div class="overlay">
             <span>Stunt Flyer Avion Lanzador<br>
@@ -680,6 +698,15 @@
             Disponible: Inmediato</span>
           </div>
         </li>
+
+        <li>
+          <img src="images/juegos/tablita_encastre.jpeg" alt="">
+          <div class="overlay">
+            <span>Frutas de madera cortables con cuchillo<br>
+            Precio: <b>$  $ 2,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
       </ul>
     </div>
     
@@ -729,6 +756,15 @@
           <div class="overlay">
             <span>Look 3 - Nationl Geographic - Workbook (con varias páginas escritas)<br>
             Precio: <b>$  $ 1,500 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/libros/libro_language_to_go_elementary.jpeg" alt="">
+          <div class="overlay">
+            <span>Language to go - Elementary - Student's Book  ($ 50.950 - 29 dias)<br>
+            Precio: <b>$  $ 15,000 </b><br>
             Disponible: Inmediato</span>
           </div>
         </li>
@@ -945,6 +981,15 @@
           <div class="overlay">
             <span>Oraciones y respuestas de los Peregrinos en Comunion<br>
             Precio: <b>$  $ 800 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/libros/libro_school_years.jpeg" alt="">
+          <div class="overlay">
+            <span>Record a Memory School Years - graba la voz de tu hijo/a <br>
+            Precio: <b>$  $ 8,000 </b><br>
             Disponible: Inmediato</span>
           </div>
         </li>
