--- a/venta/index.html
+++ b/venta/index.html
@@ -241,9 +241,45 @@
         </li>
 
         <li>
+          <img src="images/juegos/lego_city_police_water.jpeg" alt="">
+          <div class="overlay">
+            <span>Lego City Tire Scape (Nro: 60126)<br>
+            Precio: <b>$  $ 7,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/lego_ferrari_30192.jpeg" alt="">
+          <div class="overlay">
+            <span>Lego Ferrari F40 - Promocion Shell  (Nro: 30192)<br>
+            Precio: <b>$  $ 3,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/lego_city_60105.jpeg" alt="">
+          <div class="overlay">
+            <span>Lego City Bombero con Cuatriciclo 64 piezas (Nro: 60105)<br>
+            Precio: <b>$  $ 6,500 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
           <img src="images/juegos/lego_star_wars_75088.jpeg" alt="">
           <div class="overlay">
-            <span>Lego Star Wars Senate Commando Troopers - 75088<br>
+            <span>Lego Star Wars Senate Commando Troopers (Nro: 75088)<br>
+            Precio: <b>$  $ 10,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/lego_star_wars_75131.jpeg" alt="">
+          <div class="overlay">
+            <span>Lego Star Wars Resistance Trooper Battle Original (Nro: 75131)<br>
             Precio: <b>$  $ 10,000 </b><br>
             Disponible: Inmediato</span>
           </div>
@@ -252,7 +288,16 @@
         <li>
           <img src="images/juegos/lego_star_wars_75133.jpeg" alt="">
           <div class="overlay">
-            <span>Lego Star Wars Rebel Alliance Battle Pack - 75133<br>
+            <span>Lego Star Wars Rebel Alliance Battle Pack (Nro: 75133)<br>
+            Precio: <b>$  $ 10,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/lego_star_wars_75072.jpeg" alt="">
+          <div class="overlay">
+            <span>Lego Star Wars ARC-170 Starfighter & Clone Pilot (Nro: 75072)<br>
             Precio: <b>$  $ 10,000 </b><br>
             Disponible: Inmediato</span>
           </div>
@@ -290,6 +335,15 @@
           <div class="overlay">
             <span>Blocky Galactico X3  x-plorer - 65 piezas<br>
             Precio: <b>$  $ 1,500 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/star_wars_holder.jpeg" alt="">
+          <div class="overlay">
+            <span>Star Wars Boba Fett Cargador USB-C  Celular / Control Joystick<br>
+            Precio: <b>$  $ 5,000 </b><br>
             Disponible: Inmediato</span>
           </div>
         </li>
@@ -704,6 +758,330 @@
           <div class="overlay">
             <span>Frutas de madera cortables con cuchillo<br>
             Precio: <b>$  $ 2,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/connex_alarma.jpeg" alt="">
+          <div class="overlay">
+            <span>Connex Alarm System - 38823<br>
+            Precio: <b>$  $ 2,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/connex_fuente.jpeg" alt="">
+          <div class="overlay">
+            <span>Connex Alarm System - 38823<br>
+            Precio: <b>$  $ 2,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/discovery_acuatica.jpeg" alt="">
+          <div class="overlay">
+            <span>Discovery Explore Fantasía Acuática<br>
+            Precio: <b>$  $ 600 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/discovery_movimiento.jpeg" alt="">
+          <div class="overlay">
+            <span>Discovery Channel Odisea de Movimiento<br>
+            Precio: <b>$  $ 600 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/bakugan_3.jpeg" alt="">
+          <div class="overlay">
+            <span>Bakugan Battle Planet 7 En 1 Maxus Dragonoid Gigante+ Cartas<br>
+            Precio: <b>$  $ 5,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/armamec_80pcs.jpeg" alt="">
+          <div class="overlay">
+            <span>Armamec Mecano Pequeños Constructores 80 Piezas<br>
+            Precio: <b>$  $ 1,700 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/rey.jpeg" alt="">
+          <div class="overlay">
+            <span>Muñeco Rey Star Wars<br>
+            Precio: <b>$  $ 7,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/luigi_lego.jpeg" alt="">
+          <div class="overlay">
+            <span>Simil Lego Luigi y Honguito<br>
+            Precio: <b>$  $ 3,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/hulk_bloques.jpeg" alt="">
+          <div class="overlay">
+            <span>Hulk Bloques chico<br>
+            Precio: <b>$  $ 2,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/millenium_falcon.jpeg" alt="">
+          <div class="overlay">
+            <span>Halcón Milenario Star Wars Original Hasbro<br>
+            Precio: <b>$  $ 3,700 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/zombies.jpeg" alt="">
+          <div class="overlay">
+            <span>Zombies Juego de Mesa Original Toyco<br>
+            Precio: <b>$  $ 3,500 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/fut_magic.jpeg" alt="">
+          <div class="overlay">
+            <span>Fut-Magic<br>
+            Precio: <b>$  $ 4,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/playmobil_pirata.jpeg" alt="">
+          <div class="overlay">
+            <span>Playmobil Pirata (1-3570)<br>
+            Precio: <b>$  $ 2,500 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/mechanical_engineer.jpeg" alt="">
+          <div class="overlay">
+            <span>Mechanical Engineering<br>
+            Precio: <b>$  $ 3,500 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/uno.jpeg" alt="">
+          <div class="overlay">
+            <span>UNO juego oriignal <br>
+            Precio: <b>$  $ 700 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/espionaje_cartas.jpeg" alt="">
+          <div class="overlay">
+            <span>Espionaje - Juego de cartas<br>
+            Precio: <b>$  $ 2,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/me_vuelvo_mono.jpeg" alt="">
+          <div class="overlay">
+            <span>Me vuelvo mono<br>
+            Precio: <b>$  $ 800 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/ufo.jpeg" alt="">
+          <div class="overlay">
+            <span>UFO frisbee con lanzadera<br>
+            Precio: <b>$  $ 1,500 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/cante_tutti.jpeg" alt="">
+          <div class="overlay">
+            <span>Cante Tutti<br>
+            Precio: <b>$  $ 800 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/lola_mento.jpeg" alt="">
+          <div class="overlay">
+            <span>Lola-mento<br>
+            Precio: <b>$  $ 700 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/chancho_va.jpeg" alt="">
+          <div class="overlay">
+            <span>Chancho va - Bontus<br>
+            Precio: <b>$  $ 700 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/escorpion.jpeg" alt="">
+          <div class="overlay">
+            <span>La clave del escorpion<br>
+            Precio: <b>$  $ 3,500 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/life.jpeg" alt="">
+          <div class="overlay">
+            <span>LIFE: Juego de la vida<br>
+            Precio: <b>$  $ 4,500 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/buen_viaje.jpeg" alt="">
+          <div class="overlay">
+            <span>Buen Viaje Argentina<br>
+            Precio: <b>$  $ 1,500 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/triomino.jpeg" alt="">
+          <div class="overlay">
+            <span>Triomino - Bisonte - 56 piezas (Art: 8526)<br>
+            Precio: <b>$  $ 1,500 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/cruzar_palabras.jpeg" alt="">
+          <div class="overlay">
+            <span>Cruzar Palabras<br>
+            Precio: <b>$  $ 2,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/mini_bowling.jpeg" alt="">
+          <div class="overlay">
+            <span>Mini Bowling<br>
+            Precio: <b>$  $ 1,500 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/el_preso.jpeg" alt="">
+          <div class="overlay">
+            <span>El preso<br>
+            Precio: <b>$  $ 1,500 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/flipper_avengers.jpeg" alt="">
+          <div class="overlay">
+            <span>Flipper Avengers<br>
+            Precio: <b>$  $ 3,500 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/plomero_loco.jpeg" alt="">
+          <div class="overlay">
+            <span>Plomero Loco<br>
+            Precio: <b>$  $ 3,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/star_wars_puzzle_500pcs.jpeg" alt="">
+          <div class="overlay">
+            <span>Rompecabezas Star Wars - 500 piezas<br>
+            Precio: <b>$  $ 2,500 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/puzzle_cars_70.jpeg" alt="">
+          <div class="overlay">
+            <span>Rompecabezas Cars - 70 piezas<br>
+            Precio: <b>$  $ 1,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/star_wars_puzzle_48pcs.jpeg" alt="">
+          <div class="overlay">
+            <span>Rompecabezas Star Wars 48 piezas<br>
+            Precio: <b>$  $ 800 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/blanco_bolitas.jpeg" alt="">
+          <div class="overlay">
+            <span>Tiro Al Blanco pelotitas Velcro<br>
+            Precio: <b>$  $ 600 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/salt_powered_robot.jpeg" alt="">
+          <div class="overlay">
+            <span>Robot impulsado por Sal<br>
+            Precio: <b>$  $ 5,000 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/mio_el_robot.jpeg" alt="">
+          <div class="overlay">
+            <span>Mio el Robot - Programable (sin uso)<br>
+            Precio: <b>$  $ 40,000 </b><br>
             Disponible: Inmediato</span>
           </div>
         </li>
