--- a/venta/index.html
+++ b/venta/index.html
@@ -112,8 +112,8 @@
         <li>
           <img src="images/cocina/bandeja_desayuno.jpeg" alt="">
           <div class="overlay">
-            <span>Bandeja desayuno blanca<br>
-            Precio: <b>$  $ 4,000 </b><br>
+            <span>Bandeja desayuno metálica blanca<br>
+            Precio: <b>$  $ 3,000 </b><br>
             Disponible: Inmediato</span>
           </div>
         </li>
@@ -123,6 +123,15 @@
           <div class="overlay">
             <span>Especieros Condimenteros x6<br>
             Precio: <b>$  $ 1,500 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/cocina/bandeja_vidrio_marron.jpeg" alt="">
+          <div class="overlay">
+            <span>Bandeja de vidrio esmerilado grande<br>
+            Precio: <b>$  $ 2,500 </b><br>
             Disponible: Inmediato</span>
           </div>
         </li>
@@ -1282,7 +1291,7 @@
           <img src="images/rollers_2.jpeg" alt="">
           <div class="overlay">
             <span>Rollers ajustables entre talle 31 a talle 34<br>
-            Precio: <b>$  $ 15,000 </b><br>
+            Precio: <b>$  $ 9,000 </b><br>
             Disponible: Inmediato</span>
           </div>
         </li>
