--- a/venta/index.html
+++ b/venta/index.html
@@ -1238,7 +1238,7 @@
         <li>
           <img src="images/muebles/cuna_funcional.jpg" alt="">
           <div class="overlay">
-            <span>Cuna funcional con 3 cajones y baul a cama de una plaza salen de 130k a 200k. Le ponemos 75k<br>
+            <span>Cuna funcional con 3 cajones y baul a cama de una plaza<br>
             Precio: <b>$  $ 65,000 </b><br>
             Disponible: Inmediato</span>
           </div>
