--- a/venta/index.html
+++ b/venta/index.html
@@ -358,15 +358,6 @@
         </li>
 
         <li>
-          <img src="images/9_pistas.jpeg" alt="">
-          <div class="overlay">
-            <span>9 pistas - Piensa rapido y descubre el misterio<br>
-            Precio: <b>$  $ 1,700 </b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </li>
-
-        <li>
           <img src="images/juegos/a_quien_elijo.jpeg" alt="">
           <div class="overlay">
             <span>A quien Elijo - Juego de mesa<br>
@@ -425,6 +416,15 @@
           <div class="overlay">
             <span>Creando mi moda - Arma tus propias pulseras<br>
             Precio: <b>$  $ 2,500 </b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/dream_jungle.jpeg" alt="">
+          <div class="overlay">
+            <span>Dream Jungle - 115 piezas - Electric BLockWorld No. 9902<br>
+            Precio: <b>$  $ 6,500 </b><br>
             Disponible: Inmediato</span>
           </div>
         </li>
@@ -493,15 +493,6 @@
         </li>
 
         <li>
-          <img src="images/juegos/el_cuerpo_humano.jpeg" alt="">
-          <div class="overlay">
-            <span>El cuerpo humano<br>
-            Precio: <b>$  $ 1,100 </b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </li>
-
-        <li>
           <img src="images/juegos/magia_180trucos.jpeg" alt="">
           <div class="overlay">
             <span>Magia 180 trucos - Ruibal<br>
@@ -565,15 +556,6 @@
         </li>
 
         <li>
-          <img src="images/juegos/backgammon.jpeg" alt="">
-          <div class="overlay">
-            <span>Backgammon<br>
-            Precio: <b>$  $ 2,000 </b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </li>
-
-        <li>
           <img src="images/juegos/cabina_bumm.jpeg" alt="">
           <div class="overlay">
             <span>Juego De Mesa Cabina Bumm Juego De Habilidad 15014 Toyco<br>
@@ -622,15 +604,6 @@
           <img src="images/juegos/letras_y_numeros.jpg" alt="">
           <div class="overlay">
             <span>Letras y Números<br>
-            Precio: <b>$  $ 2,000 </b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/juegos/tablita_encastre.jpeg" alt="">
-          <div class="overlay">
-            <span>Frutas de madera cortables con cuchillo<br>
             Precio: <b>$  $ 2,000 </b><br>
             Disponible: Inmediato</span>
           </div>
@@ -763,24 +736,6 @@
         </li>
 
         <li>
-          <img src="images/juegos/cante_tutti.jpeg" alt="">
-          <div class="overlay">
-            <span>Cante Tutti<br>
-            Precio: <b>$  $ 800 </b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/juegos/lola_mento.jpeg" alt="">
-          <div class="overlay">
-            <span>Lola-mento<br>
-            Precio: <b>$  $ 700 </b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </li>
-
-        <li>
           <img src="images/juegos/chancho_va.jpeg" alt="">
           <div class="overlay">
             <span>Chancho va - Bontus<br>
@@ -794,24 +749,6 @@
           <div class="overlay">
             <span>La clave del escorpion<br>
             Precio: <b>$  $ 3,500 </b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/juegos/buen_viaje.jpeg" alt="">
-          <div class="overlay">
-            <span>Buen Viaje Argentina<br>
-            Precio: <b>$  $ 1,500 </b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/juegos/triomino.jpeg" alt="">
-          <div class="overlay">
-            <span>Triomino - Bisonte - 56 piezas (Art: 8526)<br>
-            Precio: <b>$  $ 1,500 </b><br>
             Disponible: Inmediato</span>
           </div>
         </li>
@@ -844,19 +781,19 @@
         </li>
 
         <li>
-          <img src="images/juegos/plomero_loco.jpeg" alt="">
+          <img src="images/juegos/flipper_avengers.jpeg" alt="">
           <div class="overlay">
-            <span>Plomero Loco<br>
-            Precio: <b>$  $ 3,000 </b><br>
+            <span>Flipper Avengers<br>
+            Precio: <b>$  $ 3,500 </b><br>
             Disponible: Inmediato</span>
           </div>
         </li>
 
         <li>
-          <img src="images/juegos/star_wars_puzzle_500pcs.jpeg" alt="">
+          <img src="images/juegos/plomero_loco.jpeg" alt="">
           <div class="overlay">
-            <span>Rompecabezas Star Wars - 500 piezas<br>
-            Precio: <b>$  $ 2,500 </b><br>
+            <span>Plomero Loco<br>
+            Precio: <b>$  $ 3,000 </b><br>
             Disponible: Inmediato</span>
           </div>
         </li>
@@ -1238,7 +1175,7 @@
         <li>
           <img src="images/muebles/cuna_funcional.jpg" alt="">
           <div class="overlay">
-            <span>Cuna funcional con 3 cajones y baul a cama de una plaza<br>
+            <span>Cuna funcional con 3 cajones y baul a cama de una plaza.<br>
             Precio: <b>$  $ 65,000 </b><br>
             Disponible: Inmediato</span>
           </div>
