Add books and reorder some games

--- a/venta/index.html
+++ b/venta/index.html
@@ -294,6 +294,14 @@
         </li>
 
         <li>
+          <img src="images/juegos/mini_tejo_con_viento.jpeg" alt="">
+          <div class="overlay">
+            <span>Juego Hockey / Tejo De Mesa con Aire<br>
+            Precio: <b>$  $ 8,000 </b></span>
+          </div>
+        </li>
+
+        <li>
           <img src="images/stunt_flyer.jpeg" alt="">
           <div class="overlay">
             <span>Stunt Flyer Avion Lanzador<br>
@@ -668,14 +676,6 @@
             Precio: <b>$  $ 40,000 </b></span>
           </div>
         </li>
-
-        <li>
-          <img src="images/juegos/mini_tejo_con_viento.jpeg" alt="">
-          <div class="overlay">
-            <span>Juego Hockey / Tejo De Mesa con Aire<br>
-            Precio: <b>$  $ 8,000 </b></span>
-          </div>
-        </li>
       </ul>
     </div>
     
@@ -1010,6 +1010,70 @@
     <div class="container">
       <h2 id="libros" class="heading-text">Libros</h2>
       <ul class="image-gallery">
+
+        <li>
+          <img src="images/libros/libro_gravity_falls_1.jpeg" alt="">
+          <div class="overlay">
+            <span>Gravity Falls: Libro 1  ($ 5000)<br>
+            Precio: <b>$  $ 5,000 </b></span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/libros/libro_gravity_falls_3.jpeg" alt="">
+          <div class="overlay">
+            <span>Gravity Falls: Libro 3  ($ 5000)<br>
+            Precio: <b>$  $ 5,000 </b></span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/libros/libro_gravity_falls_4.jpeg" alt="">
+          <div class="overlay">
+            <span>Gravity Falls: Libro 4  ($ 5000)<br>
+            Precio: <b>$  $ 5,000 </b></span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/libros/libro_gravity_falls_5.jpeg" alt="">
+          <div class="overlay">
+            <span>Gravity Falls: Libro 5  ($ 5000)<br>
+            Precio: <b>$  $ 5,000 </b></span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/libros/libro_dipper_y_mabel.jpeg" alt="">
+          <div class="overlay">
+            <span>Dipper y Mabel: La maldicion de los piratas - Elige tu propia aventura<br>
+            Precio: <b>$  $ 3,500 </b></span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/libros/libro_compas_espacio.jpeg" alt="">
+          <div class="overlay">
+            <span>Los Compas: Perdidos en el espacio<br>
+            Precio: <b>$  $ 3,500 </b></span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/libros/libro_compas_entidad.jpeg" alt="">
+          <div class="overlay">
+            <span>Los Compas: Entidad.exe<br>
+            Precio: <b>$  $ 4,000 </b></span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/libros/libro_maytalia.jpeg" alt="">
+          <div class="overlay">
+            <span>Maytalia y los inventores<br>
+            Precio: <b>$  $ 3,000 </b></span>
+          </div>
+        </li>
 
         <li>
           <img src="images/libros/libro_kasi_kasi.jpeg" alt="">
@@ -1396,7 +1460,7 @@
           <img src="images/cafetera.jpeg" alt="">
           <div class="overlay">
             <span>Cafetera Nespresso Lattissima Touch Black (F521-AR-BK-NE) - 1 año de uso<br>
-            Precio: <b>$  $ 140,000 </b></span>
+            Precio: <b>$  $ 110,000 </b></span>
           </div>
         </li>
 
@@ -1404,7 +1468,7 @@
           <img src="images/gear_vr.jpeg" alt="">
           <div class="overlay">
             <span>Samsung Oculus Gear VR - Compatible: S7, S7 edge, Note5, S6 edge+, S6, S6 edge (SM-R323)<br>
-            Precio: <b>$  $ 7,000 </b></span>
+            Precio: <b>$  $ 5,000 </b></span>
           </div>
         </li>
 
@@ -1412,7 +1476,7 @@
           <img src="images/headset.jpeg" alt="">
           <div class="overlay">
             <span>Headset Gamer SteelSeries Siberia V1 - Funcionan perfectos - Funda de la cinta desgastada<br>
-            Precio: <b>$  $ 10,000 </b></span>
+            Precio: <b>$  $ 7,000 </b></span>
           </div>
         </li>
 
@@ -1428,7 +1492,7 @@
           <img src="images/tech/phone_holder.jpeg" alt="">
           <div class="overlay">
             <span>Soporte para Telefono en Auto - Magnético Bolita - Sin uso<br>
-            Precio: <b>$  $ 4,000 </b></span>
+            Precio: <b>$  $ 3,000 </b></span>
           </div>
         </li>
 
@@ -1436,7 +1500,7 @@
           <img src="images/tech/soporte_tv.jpeg" alt="">
           <div class="overlay">
             <span>Soporte para TV TCL - Modelo LCD-32PAR - Para modelos LCD27V8 - LCD32V8 - LCD37V8 - LCD40V8 <br>
-            Precio: <b>$  $ 1,000 </b></span>
+            Precio: <b>$  $ 800 </b></span>
           </div>
         </li>
       </ul>
