--- a/venta/index.html
+++ b/venta/index.html
@@ -590,14 +590,6 @@
         </li>
 
         <li>
-          <img src="images/juegos/ufo.jpeg" alt="">
-          <div class="overlay">
-            <span>UFO frisbee con lanzadera<br>
-            Precio: <b>$  $ 1,500 </b></span>
-          </div>
-        </li>
-
-        <li>
           <img src="images/juegos/escorpion.jpeg" alt="">
           <div class="overlay">
             <span>La clave del escorpion<br>
@@ -674,6 +666,22 @@
           <div class="overlay">
             <span>Mio el Robot - Programable (sin uso)<br>
             Precio: <b>$  $ 40,000 </b></span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/sospechosos.jpeg" alt="">
+          <div class="overlay">
+            <span>Sospechosos - Juego de misterio<br>
+            Precio: <b>$  $ 2,000 </b></span>
+          </div>
+        </li>
+
+        <li>
+          <img src="images/juegos/claim.jpeg" alt="">
+          <div class="overlay">
+            <span>CLAIM Reclama La Corona Cartas Juego De Mesa Top Toys<br>
+            Precio: <b>$  $ 2,000 </b></span>
           </div>
         </li>
       </ul>
@@ -1447,22 +1455,6 @@
     <div class="container">
       <h2 id="tecnologia" class="heading-text">Tecnologia</h2>
       <ul class="image-gallery">
-
-        <li>
-          <img src="images/tech/dron_d10_con_camara.jpeg" alt="">
-          <div class="overlay">
-            <span>Drone Ydjia D10 - Cámara HD - Conexion WiFi con Celular<br>
-            Precio: <b>$  $ 10,000 </b></span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/cafetera.jpeg" alt="">
-          <div class="overlay">
-            <span>Cafetera Nespresso Lattissima Touch Black (F521-AR-BK-NE) - 1 año de uso<br>
-            Precio: <b>$  $ 110,000 </b></span>
-          </div>
-        </li>
 
         <li>
           <img src="images/gear_vr.jpeg" alt="">
