--- a/venta/index.html
+++ b/venta/index.html
@@ -206,54 +206,6 @@
       <ul class="image-gallery">
 
         <li>
-          <img src="images/juegos/lego_ferrari_30192.jpeg" alt="">
-          <div class="overlay">
-            <span>Lego Ferrari F40 - Promocion Shell  (Nro: 30192)<br>
-            Precio: <b>$  $ 3,000 </b></span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/juegos/lego_star_wars_75088.jpeg" alt="">
-          <div class="overlay">
-            <span>Lego Star Wars Senate Commando Troopers (Nro: 75088)<br>
-            Precio: <b>$  $ 10,000 </b></span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/juegos/lego_star_wars_75131.jpeg" alt="">
-          <div class="overlay">
-            <span>Lego Star Wars Resistance Trooper Battle Original (Nro: 75131)<br>
-            Precio: <b>$  $ 10,000 </b></span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/juegos/lego_star_wars_75133.jpeg" alt="">
-          <div class="overlay">
-            <span>Lego Star Wars Rebel Alliance Battle Pack (Nro: 75133)<br>
-            Precio: <b>$  $ 10,000 </b></span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/juegos/lego_star_wars_75072.jpeg" alt="">
-          <div class="overlay">
-            <span>Lego Star Wars ARC-170 Starfighter & Clone Pilot (Nro: 75072)<br>
-            Precio: <b>$  $ 10,000 </b></span>
-          </div>
-        </li>
-
-        <li>
-          <img src="images/juegos/simil_lego_star_wars.jpeg" alt="">
-          <div class="overlay">
-            <span>Star Wars S.y (Replica Lego) - Sy196D - 80 piezas<br>
-            Precio: <b>$  $ 2,000 </b></span>
-          </div>
-        </li>
-
-        <li>
           <img src="images/juegos/simil_lego_spiderman.jpeg" alt="">
           <div class="overlay">
             <span>Spiderman Super Heroes (Replica Lego)<br>
@@ -689,7 +641,7 @@
     
 
     <div class="container">
-      <h2 id="peluches" class="heading-text">Peluches</h2>
+      <h2 id="peluches" class="heading-text">Peluches - Promoción 3x2 (el de menor valor es gratis)</h2>
       <ul class="image-gallery">
 
         <li>
@@ -935,7 +887,7 @@
         <li>
           <img src="images/peluches/peluche_perro_gigante.jpg" alt="">
           <div class="overlay">
-            <span>Peluche Perro Gigante (1 metro de alto aproximado)<br>
+            <span>Peluche Perro Gigante - 1 metro de alto aproximado (Sin promocion 3x2)<br>
             Precio: <b>$  $ 7,000 </b></span>
           </div>
         </li>
